fix unit test failures